# guard-api-beta

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile.api  Dockerfile.inference  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  audio_transcriber.py  auth.py  bootstrap.py  clerk_auth.py  db.py  detectors.py  image_scanner.py  inference_client.py  main.py  models.py  policy.py  review.py  schemas.py  security.py  settings.py  taxonomy.py  usage_credits.py  vision_safety.py
docs/: adaptive_abuse_intelligence_layer.md  beta_deployment_runbook.md  beta_onboarding_email.md  customer_integration_quickstart.md  demo_video_script.md  go_to_market.md  integration_guide.md  launch_runbook.md  operations_runbook.md  private_beta_launch.md  production-deployment-checklist.md  production_readiness.md  sales_demo_script.md  support_and_refund_process.md
examples/: README.md
frontend/: .env.example  .env.production.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js
frontend/src/: App.tsx  (+3 more)
inference_service/: main.py  model_runner.py
scripts/: beta_smoke.py  migrate_sqlite_to_postgres.py
shared/: inference_schemas.py
tests/: conftest.py  test_api_keys.py  test_audit_logging.py  test_auth.py  test_billing.py  test_dashboard.py  test_inference_client.py  test_playground.py  test_policy.py  test_production_safety.py  test_social_actions.py  test_social_connectors.py  test_vision_safety.py
(+32 files in other folders)
