[project]
name = "guard-api"
version = "0.1.0"
description = "Real-time trust and safety moderation API for UGC platforms."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "google-cloud-vision>=3.11.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.36",
    "stripe>=13.0.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
ml = [
    "open_clip_torch>=2.24.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "inference_service*", "shared*"]
